<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckimg"
    tools:context=".Playing">

    <ImageView
        android:id="@+id/question_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="200dp" />
    
    <TextView
        android:id="@+id/question_text"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="24dp"
        android:textColor="#3531af"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/group"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtScore"
                    android:textColor="@android:color/holo_blue_dark"
                    android:gravity="center_horizontal"
                    android:text="@string/zero"
                    android:textSize="36sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtTotalQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/totalques"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="36sp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:max="5"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerA"
                android:text="@string/answer_a"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#15117f"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerB"
                android:text="@string/answer_b"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#15117f"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerC"
                android:text="@string/answer_c"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#15117f"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerD"
                android:text="@string/answer_d"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#15117f"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>