<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckimg"
    tools:context=".Done">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/btnGroup"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtScore"
                android:text="@string/score0"
                android:textSize="30sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtTotalQuestion"
                android:text="@string/passed0"
                android:textSize="30sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/doneProgressBar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/btnTryAgain"
                android:layout_margin="8dp"
                android:background="#15117f"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/try_again"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>